--- a/r2ps_msgs/CMakeLists.txt
+++ b/r2ps_msgs/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/NodeList.msg"
   "msg/Process.msg"
   "msg/ProcessList.msg"
   DEPENDENCIES std_msgs
