--- a/r2ps_process_controller/package.xml
+++ b/r2ps_process_controller/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>r2ps_behavior_manager</name>
+  <name>r2ps_process_controller</name>
   <version>0.0.1</version>
-  <description>ROS2 Behavior Manager Package</description>
+  <description>ROS2 Process Controller Package</description>
   <maintainer email="naru5135@wavem.net">reidlo</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclnodejs</depend>
-
+  
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
