--- a/r2ps_process_controller/CMakeLists.txt
+++ b/r2ps_process_controller/CMakeLists.txt
@@ -5,7 +5,43 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+include_directories(
+  include/
+  include/${PROJECT_NAME}
+)
+
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(r2ps_msgs REQUIRED)
+
+set(SOURCES
+  src/controller/controller.cxx
+  src/service/ps.cxx
+  src/service/r2.cxx
+  src/main.cxx
+)
+
+set(DEPENDS
+  rclcpp
+  r2ps_msgs
+)
+
+set(EXEC_NAME r2ps_process_controller)
+
+add_executable(${EXEC_NAME}
+  src/controller/controller.cxx
+  src/service/ps.cxx
+  src/service/r2.cxx
+  src/main.cxx
+)
+
+ament_target_dependencies(${EXEC_NAME}
+  ${DEPENDS}
+)
+
+install(TARGETS ${EXEC_NAME}
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -15,17 +51,3 @@ if(BUILD_TESTING)
 endif()
 
 ament_package()
-
-install(FILES 
-  package.json
-  DESTINATION share/${PROJECT_NAME}/
-)
- 
-install(DIRECTORY 
-  config
-  dist
-  launch
-  node_modules
-  DESTINATION share/${PROJECT_NAME}/
-  OPTIONAL
-) 
