feat : initial commit

--- a/r2ps_utils/CMakeLists.txt
+++ b/r2ps_utils/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(std_msgs REQUIRED)
 
 set(SOURCES
   src/r2ps_utils/string.cxx
+  src/r2ps_utils/process.cxx
 )
 
 set(LIB_NAME r2ps_utils)
