feat : add r2ps_launch_operator

--- a/r2ps_launch_operator/CMakeLists.txt
+++ b/r2ps_launch_operator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(r2ps_process_controller)
+project(r2ps_launch_operator)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -12,23 +12,23 @@ include_directories(
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(r2ps_msgs REQUIRED)
 find_package(r2ps_utils REQUIRED)
 
 set(SOURCES
-  src/process_controller.cpp
-  src/ps_manager.cpp
-  src/r2_manager.cpp
+  src/r2ps_launch_operator.cpp
   src/main.cpp
 )
 
 set(DEPENDS
   rclcpp
+  std_msgs
   r2ps_msgs
   r2ps_utils
 )
 
-set(EXEC_NAME r2ps_process_controller)
+set(EXEC_NAME r2ps_launch_operator)
 
 add_executable(${EXEC_NAME}
   ${SOURCES}
@@ -40,6 +40,11 @@ ament_target_dependencies(${EXEC_NAME}
 
 install(TARGETS ${EXEC_NAME}
   DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
